--- a/templates/form.html
+++ b/templates/form.html
@@ -44,7 +44,7 @@
 </style>
 <div>
   <form action="{{url_for('predict_datapoint')}}" method="POST">
-  <h1 style="background-color: skyblue; text-align: center; padding: 30px 0; font-size: 3em;">ZOMATO TIME PREDICTION</h1>
+  <h1 style="background-color: skyblue; text-align: center; padding: 30px 0; font-size: 3em;">DELIVERY TIME PREDICTION</h1>
   <div class="page">
       <div class="container">
 
